Add quick reference sections to multiple documentation files